Fixing layout of un-decided players on mobile-sized devices.

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -659,6 +659,33 @@ table td {
 			}
 		}
 		
+		&.newGame {
+			top: 136px;
+			left: 54px;
+
+			.person:nth-child(1n+5) {
+				margin-top: -35px;
+			}
+			.person:nth-child(4n+1) {
+				margin-left: 40px;
+			}
+			.person:nth-child(4n+5) {
+				margin-left: 20px;
+			}
+			.person:nth-child(4n+9) {
+				margin-left: 0;
+			}
+			.person:nth-child(4n+13) {
+				margin-left: 20px;
+			}
+			.person:nth-child(1n+12) {
+				margin-right: 20px;
+			}
+			.person:nth-child(1n+13) {
+				margin-right: 0;
+			}
+		}
+		
 		.person {
 			width: 30px;
 			height: 56px;
